<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExampleActivity">

    <androidx.appcompat.widget.AppCompatImageButton
            android:src="@drawable/ic_close_black"
            android:id="@+id/closeBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            app:layout_constraintHorizontal_bias="1"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example1_welcome"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:id="@+id/welcomeMsgTV"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example1_instruction"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMsgTV"
            android:id="@+id/welcomeHintTV"/>

    <EditText
            android:hint="+7(___) ___-__-__"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHintTV"
            android:id="@+id/numberEditText"/>

    <Button
            android:id="@+id/welcomeBtn"
            android:text="@string/example1_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:backgroundTint="@color/deepDark"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toBottomOf="@+id/numberEditText"/>

    <TextView
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/example1_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>